tests/bind-01/out.txt
error: non-exhaustive binding
  ┌─ err.sml:2:5
  │
2 │ val One = One
  │     ^^^

typechecking failed
